# SimpleEngine

./: CMakeLists.txt
engine/: CMakeLists.txt
engine/asset/level/: 1-1.level.json
engine/asset/objects/character/camera/: camera.object.json
engine/configs/: EngineEditor.ini
engine/shader/: CMakeLists.txt
engine/shader/glsl/: axis.vert  combine_ui.frag  debug_draw.frag  debug_draw.vert  deferred_lighting.frag  deferred_lighting.vert  mesh.frag  mesh.vert  mesh_directional_light_shadow.vert  mesh_gbuffer.frag  mesh_inefficient_pick.frag  mesh_inefficient_pick.vert  mesh_point_light_shadow.frag  mesh_point_light_shadow.geom  mesh_point_light_shadow.vert  post_process.vert  skybox.frag  skybox.vert
engine/shader/include/: constants.h  structures.h
engine/source/_generated/reflection/: all_reflection.h  animation.reflection.gen.h  animation_clip.reflection.gen.h  animation_skeleton_node_map.reflection.gen.h  axis_aligned.reflection.gen.h  basic_shape.reflection.gen.h  blend_state.reflection.gen.h  camera.reflection.gen.h  camera_component.reflection.gen.h  camera_config.reflection.gen.h  color.reflection.gen.h  component.reflection.gen.h  emitter.reflection.gen.h  global_particle.reflection.gen.h  global_rendering.reflection.gen.h  level.reflection.gen.h  material.reflection.gen.h  matrix4.reflection.gen.h  mesh.reflection.gen.h  mesh_component.reflection.gen.h  mesh_data.reflection.gen.h  meta_example.reflection.gen.h  motor.reflection.gen.h  object.reflection.gen.h  quaternion.reflection.gen.h  render_object.reflection.gen.h  rigid_body.reflection.gen.h  rigidbody_component.reflection.gen.h  skeleton_data.reflection.gen.h  skeleton_mask.reflection.gen.h  transform.reflection.gen.h  transform_component.reflection.gen.h  vector2.reflection.gen.h  vector3.reflection.gen.h  vector4.reflection.gen.h  world.reflection.gen.h
engine/source/_generated/serializer/: all_serializer.h  all_serializer.ipp  animation.serializer.gen.h  animation_clip.serializer.gen.h  animation_skeleton_node_map.serializer.gen.h  axis_aligned.serializer.gen.h  basic_shape.serializer.gen.h  blend_state.serializer.gen.h  camera.serializer.gen.h  camera_component.serializer.gen.h  camera_config.serializer.gen.h  color.serializer.gen.h  component.serializer.gen.h  emitter.serializer.gen.h  global_particle.serializer.gen.h  global_rendering.serializer.gen.h  level.serializer.gen.h  material.serializer.gen.h  matrix4.serializer.gen.h  mesh.serializer.gen.h  mesh_component.serializer.gen.h  mesh_data.serializer.gen.h  meta_example.serializer.gen.h  motor.serializer.gen.h  object.serializer.gen.h  quaternion.serializer.gen.h  render_object.serializer.gen.h  rigid_body.serializer.gen.h  rigidbody_component.serializer.gen.h  skeleton_data.serializer.gen.h  skeleton_mask.serializer.gen.h  transform.serializer.gen.h  transform_component.serializer.gen.h  vector2.serializer.gen.h  vector3.serializer.gen.h  vector4.serializer.gen.h  world.serializer.gen.h
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_global_context.h  editor_input_manager.h  editor_scene_manager.h  editor_ui.h
engine/source/editor/resource/: EngineEditor.rc
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_global_context.cpp  editor_input_manager.cpp  editor_scene_manager.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/language_types/: class.cpp  field.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: macro.h
engine/source/runtime/core/color/: color.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_headers.h  math_marcos.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/meta/: json.h  meta_example.cpp  meta_example.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/level/: level.cpp  level.h  level_debugger.cpp  level_debugger.h
engine/source/runtime/function/framework/object/: object.cpp  object.h  object_id_allocator.cpp  object_id_allocator.h
engine/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/render/: light.h  render_camera.cpp  render_camera.h  render_common.h  render_debug_config.h  render_entity.h  render_guid_allocator.h  render_helper.cpp  render_helper.h  render_mesh.h  render_object.h  render_pass.cpp  render_pass.h  render_pass_base.h  render_pipeline.cpp  render_pipeline.h  render_pipeline_base.cpp  render_pipeline_base.h  render_resource.cpp  render_resource.h  render_resource_base.cpp  render_resource_base.h  render_scene.cpp  render_scene.h  render_swap_context.cpp  render_swap_context.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/debugdraw/: debug_draw_buffer.cpp  debug_draw_font.h  (+12 more)
engine/source/runtime/function/ui/: window_ui.h
engine/source/runtime/platform/file_system/: file_system.h
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/resource/asset_manager/: asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
(+51 files in other folders)
